--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -12,6 +12,7 @@ gunicorn==23.0.0
 h11==0.14.0
 idna==3.10
 jmespath==1.0.1
+mangum==0.19.0
 packaging==24.2
 passlib==1.7.4
 psycopg2-binary==2.9.10
