--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^16.18.126",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
+    "amazon-cognito-identity-js": "^6.3.12",
     "aws-amplify": "^6.13.1",
     "axios": "^1.7.9",
     "react": "^19.0.0",
