--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -19,8 +19,10 @@ psycopg2-binary==2.9.10
 pyasn1==0.4.8
 pycparser==2.22
 pydantic==2.10.6
+pydantic-settings==2.8.1
 pydantic_core==2.27.2
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 python-jose==3.4.0
 python-multipart==0.0.20
 rsa==4.9
