--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,6 +6,7 @@ cffi==1.17.1
 click==8.1.8
 cryptography==44.0.2
 ecdsa==0.19.0
+Faker==37.0.2
 fastapi==0.115.8
 greenlet==3.1.1
 gunicorn==23.0.0
@@ -32,5 +33,6 @@ sniffio==1.3.1
 SQLAlchemy==2.0.38
 starlette==0.45.3
 typing_extensions==4.12.2
+tzdata==2025.1
 urllib3==2.3.0
 uvicorn==0.34.0
