--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,12 +1,12 @@
 annotated-types==0.7.0
-anyio==4.8.0
+anyio>=4.5.2
 boto3==1.36.26
 botocore==1.36.26
 cffi==1.17.1
 click==8.1.8
 cryptography==44.0.2
 ecdsa==0.19.0
-Faker==37.0.2
+Faker==24.11.0
 fastapi==0.115.8
 greenlet==3.1.1
 gunicorn==23.0.0
@@ -31,8 +31,8 @@ s3transfer==0.11.2
 six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.38
-starlette==0.45.3
+starlette==0.44.0
 typing_extensions==4.12.2
 tzdata==2025.1
-urllib3==2.3.0
-uvicorn==0.34.0
+urllib3==1.26.18
+uvicorn==0.33.0
