--- a/backend/fastapi-ec2-alb.yaml
+++ b/backend/fastapi-ec2-alb.yaml
@@ -14,12 +14,6 @@ Parameters:
     Description: List of public subnet IDs for the ALB
     Type: List<AWS::EC2::Subnet::Id>
 
-  TargetGroupFullName:
-    Type: String
-    Description: Full name of the Target Group (e.g., targetgroup/my-app-tg/123456abcdef)
-  LoadBalancerFullName:
-    Type: String
-    Description: Full name of the ALB (e.g., app/my-alb/123456abcdef)
   DashboardName:
     Type: String
     Default: ALB-Monitoring-Dashboard
@@ -276,7 +270,7 @@ Resources:
   TargetResponseTimeAlarm:
     Type: AWS::CloudWatch::Alarm
     Properties:
-      AlarmName: !Sub "${TargetGroupFullName}-HighTargetResponseTime"
+      AlarmName: !Sub "${AWS::StackName}-HighTargetResponseTime"
       ComparisonOperator: GreaterThanThreshold
       EvaluationPeriods: 1
       MetricName: TargetResponseTime
@@ -287,15 +281,15 @@ Resources:
       AlarmDescription: ALB target response time > 200ms
       Dimensions:
         - Name: TargetGroup
-          Value: !Ref TargetGroupFullName
+          Value: !GetAtt TargetGroup.TargetGroupFullName
         - Name: LoadBalancer
-          Value: !Ref LoadBalancerFullName
+          Value: !GetAtt ALB.LoadBalancerFullName
       TreatMissingData: notBreaching
 
   Target5XXErrorAlarm:
     Type: AWS::CloudWatch::Alarm
     Properties:
-      AlarmName: !Sub "${TargetGroupFullName}-Target5XXErrors"
+      AlarmName: !Sub "${AWS::StackName}-Target5XXErrors"
       ComparisonOperator: GreaterThanOrEqualToThreshold
       EvaluationPeriods: 1
       MetricName: HTTPCode_Target_5XX_Count
@@ -306,9 +300,9 @@ Resources:
       AlarmDescription: ALB target returned 5XX errors
       Dimensions:
         - Name: TargetGroup
-          Value: !Ref TargetGroupFullName
+          Value: !GetAtt TargetGroup.TargetGroupFullName
         - Name: LoadBalancer
-          Value: !Ref LoadBalancerFullName
+          Value: !GetAtt ALB.LoadBalancerFullName
       TreatMissingData: notBreaching
 
   BillingAlarm:
@@ -341,7 +335,7 @@ Resources:
               "width": 12,
               "height": 6,
               "properties": {
-                "metrics": [["AWS/ApplicationELB", "TargetResponseTime", "TargetGroup", "${TargetGroupFullName}", "LoadBalancer", "${LoadBalancerFullName}"]],
+                "metrics": [["AWS/ApplicationELB", "TargetResponseTime", "TargetGroup", "${TargetGroup.TargetGroupFullName}", "LoadBalancer", "${ALB.LoadBalancerFullName}"]],
                 "region": "${AWS::Region}",
                 "stat": "Average",
                 "title": "Target Response Time (Average)",
@@ -355,7 +349,7 @@ Resources:
               "width": 12,
               "height": 6,
               "properties": {
-                "metrics": [["AWS/ApplicationELB", "TargetResponseTime", "TargetGroup", "${TargetGroupFullName}", "LoadBalancer", "${LoadBalancerFullName}" , {"stat": "p99"}]],
+                "metrics": [["AWS/ApplicationELB", "TargetResponseTime", "TargetGroup", "${TargetGroup.TargetGroupFullName}", "LoadBalancer", "${ALB.LoadBalancerFullName}" , {"stat": "p99"}]],
                 "region": "${AWS::Region}",
                 "title": "Target Response Time (P99)",
                 "period": 300
@@ -368,7 +362,7 @@ Resources:
               "width": 12,
               "height": 6,
               "properties": {
-                "metrics": [["AWS/ApplicationELB", "HTTPCode_Target_5XX_Count", "TargetGroup", "${TargetGroupFullName}", "LoadBalancer", "${LoadBalancerFullName}"]],
+                "metrics": [["AWS/ApplicationELB", "HTTPCode_Target_5XX_Count", "TargetGroup", "${TargetGroup.TargetGroupFullName}", "LoadBalancer", "${ALB.LoadBalancerFullName}"]],
                 "region": "${AWS::Region}",
                 "title": "Target 5XX Errors",
                 "stat": "Sum",
@@ -382,7 +376,7 @@ Resources:
               "width": 12,
               "height": 6,
               "properties": {
-                "metrics": [["AWS/ApplicationELB", "RequestCountPerTarget", "TargetGroup", "${TargetGroupFullName}", "LoadBalancer", "${LoadBalancerFullName}"]],
+                "metrics": [["AWS/ApplicationELB", "RequestCountPerTarget", "TargetGroup", "${TargetGroup.TargetGroupFullName}", "LoadBalancer", "${ALB.LoadBalancerFullName}"]],
                 "region": "${AWS::Region}",
                 "title": "Request Count Per Target",
                 "stat": "Sum",
@@ -397,8 +391,8 @@ Resources:
               "height": 6,
               "properties": {
                 "metrics": [
-                  ["AWS/ApplicationELB", "HealthyHostCount", "TargetGroup", "${TargetGroupFullName}", "LoadBalancer", "${LoadBalancerFullName}"],
-                  [".", "UnHealthyHostCount", ".", "${TargetGroupFullName}", ".", "${LoadBalancerFullName}"]
+                  ["AWS/ApplicationELB", "HealthyHostCount", "TargetGroup", "${TargetGroup.TargetGroupFullName}", "LoadBalancer", "${ALB.LoadBalancerFullName}"],
+                  [".", "UnHealthyHostCount", ".", "${TargetGroup.TargetGroupFullName}", ".", "${ALB.LoadBalancerFullName}"]
                 ],
                 "region": "${AWS::Region}",
                 "title": "Healthy vs Unhealthy Host Count",
